--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,18 @@
 name: app
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.0.0+1
+version: 0.0.0+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  freezed: ^2.3.2
+  google_maps_flutter: ^2.1.8
 
 dev_dependencies:
   flutter_test:
@@ -17,34 +21,3 @@ dev_dependencies:
 
 flutter:  
   uses-material-design: true
-
-  
-  
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
