--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude: [
+      lib/**.g.dart,
+      lib/generated/**,
+  ]
+
 linter:
   rules:
