--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
   google_maps_flutter: ^2.1.8
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter  
   flutter_lints: ^2.0.0
+  lint: ^1.8.2
 
 flutter_intl:
   enabled: true
