--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,15 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   google_maps_flutter: ^2.1.8
 
 dev_dependencies:
   build_runner: ^2.3.3
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter  
-  flutter_lints: ^2.0.0
   lint: ^1.8.2
 
 flutter_intl:
