--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   google_maps_flutter: ^2.1.8
+  map_launcher: ^2.4.0
 
 dev_dependencies:
   build_runner: ^2.3.3
