--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_map: ^3.1.0
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   google_maps_flutter: ^2.1.8
+  latlong2: ^0.8.1
   map_launcher: ^2.4.0
 
 dev_dependencies:
