--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,14 @@ environment:
 
 dependencies:
   cached_network_image: ^3.2.3
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
   flutter_map: ^3.1.0
-  freezed: ^2.3.2
+  freezed: ^2.0.0
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   google_maps_flutter: ^2.1.8
@@ -22,11 +23,13 @@ dependencies:
   map_launcher: ^2.4.0
 
 dev_dependencies:
-  build_runner: ^2.3.3
+  bloc_test: ^9.0.0
+  build_runner: ^2.2.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter  
-  lint: ^1.8.2
+  lint: ^2.0.1
+  mocktail: ^0.3.0
 
 flutter_intl:
   enabled: true
