--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,12 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.fvm/flutter_sdk
 .packages
 .pub-cache/
 .pub/
 /build/
+
 
 # Symbolication related
 app.*.symbols
