--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   cached_network_image: ^3.2.3
   equatable: ^2.0.5
+  fluster: ^1.2.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
