--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter  
+  intl_utils: ^2.7.0
   lint: ^2.0.1
   mocktail: ^0.3.0
   patrol: ^1.0.4
@@ -46,4 +47,5 @@ flutter:
           weight: 400
         - asset: fonts/Roboto-Bold.ttf
           weight: 700
+  generate: true
   uses-material-design: true
