--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
+  bloc_presentation: ^0.2.1
   cached_network_image: ^3.2.3
   equatable: ^2.0.5
   fluster: ^1.2.0
