--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   bloc_presentation: ^0.2.1
   cached_network_image: ^3.2.3
+  dartz: ^0.10.1
+  either_dart: ^0.3.0
   equatable: ^2.0.5
   fluster: ^1.2.0
   flutter:
