--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_map: ^3.1.0
   freezed: ^2.0.0
   freezed_annotation: ^2.2.0
+  geolocator: ^9.0.2
   get_it: ^7.2.0
   image_picker: ^0.8.7+4
   latlong2: ^0.8.1
