--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Aplikacja potrzebuje dostępu do kamery, by umożliwić robienie zdjęć parków.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Aplikacja potrzebuje dostępu do lokalizacji, by umożliwić wyszukiwanie parków na podstawie lokalizacji.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Aplikacja potrzebuje dostępu do lokalizacji, by umożliwić wyszukiwanie parków na podstawie lokalizacji.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Aplikacja potrzebuje dostępu do galerii, by umożliwić wybranie zdjęć parków.</string>
 	<key>UILaunchStoryboardName</key>
