--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dev_dependencies:
 flutter_intl:
   enabled: true
 
-flutter:  
+flutter:
+  assets:
+    - assets/images/  
   fonts:
     - family: Roboto
       fonts:
