--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   geolocator: ^9.0.2
   get_it: ^7.2.0
   image_picker: ^0.8.7+4
+  intl: ^0.18.0
   latlong2: ^0.8.1
   map_launcher: ^2.4.0
   photo_view: ^0.14.0
