--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,18 @@ android {
         versionName flutterVersionName
     }
 
+    flavorDimensions 'environment'
+    productFlavors {
+        dev {
+            dimension 'environment'
+            applicationIdSuffix '.dev'
+            versionNameSuffix '-dev'
+        }
+        prod {
+            dimension 'environment'
+        }
+    }
+
     buildTypes {
         release {
             signingConfig signingConfigs.debug
